fix: move controller behind screen using z-index

--- a/src/app/ui/components/screen/screen.component.scss
+++ b/src/app/ui/components/screen/screen.component.scss
@@ -8,6 +8,7 @@
   position: relative;
   box-shadow: inset 0px -20px 0px rgba($color-black, 0.5),
     inset 0px 16px 0px rgba($color-white, 0.25);
+    z-index:2;
 
   &__notch {
     &:first-of-type {
